--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,9 @@
 page-home {
+    .toolbar-title-md {
+        padding: 0 100px;
+        font-size: 2rem;
+        font-weight: 500;
+        color: #424242;
+      }
 
 }
