--- a/src/app/app.html
+++ b/src/app/app.html
@@ -18,6 +18,9 @@
       <button ion-item>
         Minha conta
       </button>
+      <button ion-item (click)="logout()">
+        Sair
+      </button>
     </ion-list>
   </ion-content>
 </ion-menu>
