Implementando navegação entre paginas no meu

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -15,7 +15,7 @@
       <button ion-item>
         Chat
       </button>
-      <button ion-item>
+      <button ion-item (click)="escrever()">
         Minha conta
       </button>
       <button ion-item (click)="logout()">
