Arrumando cabeçalho de autenticação no provider serviços

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -6,7 +6,7 @@
   </ion-header>
   <ion-content>
     <ion-list>
-      <button ion-item>
+      <button ion-item (click)="meusServicos()">
         Serviços
       </button>
       <button ion-item>
