--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -50,7 +50,7 @@
   #menu-material {
       .menu-header {
         padding: 5px 15px;
-        background-image: url('../assets/imgs/job1.jpg');
+        background-image: url('../assets/imgs/misc/material-design-background.jpg');
         background-size: cover;
         color: white;
         .name {
