--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,7 +2,7 @@
     <ion-content>
       <div class="menu-header" >
         <!--material-design-background-->
-        <img class="user-avatar round" style="height:90px;max-width:90px;" [src]="chosenPicture || placeholder" onerror="this.src='assets/icon/icone-do-usuario.jpg'"
+        <img class="user-avatar round" style="height:90px;max-width:90px;" src="assets/icon/icone-do-usuario.jpg"
         />
         <p class="name">{{usuarioEmail}}</p>
         <p class="e-mail">{{usuarioNome}}</p>
