Funcionalidade apagar meu serviço/anuncio

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -19,6 +19,8 @@ page-home {
         flex-grow: 1;
         max-width: 100%;
       }
-   
+      ion-label.label.label-md {
+        white-space: unset;
+    }
 
 }
